build: upgrade `react` to version 19.0.0

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "js-yaml": "^4.1.0",
     "kysely": "^0.28.2",
     "mime": "^4.0.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-is": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-is": "19.0.0",
     "react-redux": "^9.2.0",
     "reflect-metadata": "^0.2.2",
     "remarkable": "^2.0.1",
@@ -65,9 +65,9 @@
     "@types/bunyan": "^1.8.11",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.14.1",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@types/react-is": "^18.3.1",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@types/react-is": "19.0.0",
     "@types/remarkable": "^2.0.8",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
